--- a/css/styles.css
+++ b/css/styles.css
@@ -679,7 +679,7 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 40px;
+    /* padding: 40px; */
 }
 .data-modal-close {
     position: absolute;
@@ -703,20 +703,63 @@ img {
     width: 100%;
     text-align: center;
 }
-.modal-input {
+/* .modal-input {
     width: 448px;
     height: 40px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
     /* padding-left: 10px; */
 }
 .modal-input:hover,
 .modal-input:focus {
     border: 1px solid #2196f3;
 }
-.modal-label {
-    font-weight: 400;
+.form {
+    width: 528px;
+    height: 581px;
+    outline: 1px solid #e818a3;
+    padding: 40px;
+}
+.form-field {
+    outline: 1px solid #e818a3;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+.form-field input {
+    margin: 0;
+    padding: 12px 12px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+.form-field label {
+    margin-bottom: 4px;
+}
+.form-field::placeholder {
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+.conditions-block {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.conditions-block input [type='checkbox'] {
+    width: 16px;
+    height: 15px;
+}
+.conditions-block label {
+    font-size: 20px;
+    margin-left: 10px;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.form-label {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
@@ -725,7 +768,7 @@ img {
     /* margin-bottom: 4px; */
 }
 
-.modal-text {
+.form-text {
     width: 100%;
     height: 120px;
     padding: 12px 16px;
@@ -739,7 +782,7 @@ img {
     margin-bottom: 20px;
 }
 
-.modal-btn {
+.form-btn {
     display: inline-block;
     font-family: inherit;
     font-weight: 700;
@@ -764,19 +807,19 @@ img {
     background: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-.modal-btn:hover,
-.modal-btn:focus {
+.form-btn:hover,
+.form-btn:focus {
     background-color: var(--button-background-hover);
 }
 
-.conditions-block {
+/* .conditions-block {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: #757575;
     margin-bottom: 30px;
-}
+} */
 
 .conditions-link {
     display: inline-block;
@@ -799,3 +842,106 @@ img {
 /* .conditions-block {
     display: inline-block;
 } */
+
+/* ____________ФУТЕР ФОРМА____________ */
+
+.footer-field-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 12px;
+    width: 100%;
+    text-align: left;
+}
+
+.footer-form {
+    display: block;
+    width: 570px;
+    /* height: 86px; */
+    outline: 1px solid #e818a3;
+    /* padding: 40px; */
+    /* display: flex;
+    flex-direction: row; */
+    /* margin-bottom: 10px; */
+    margin-left: 93px;
+}
+.form-field-footer {
+    outline: 1px solid #e818a3;
+    display: flex;
+    flex-direction: row;
+    /* margin-bottom: 10px; */
+}
+.form-field-footer input {
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+border-radius: 4px;
+background-color: #2F303A;
+}
+
+.form-input-footer::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);;
+}
+
+.form-label-footer {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+    display: block;
+    /* margin-bottom: 4px; */
+}
+
+.form-text-footer {
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    /* color: rgba(117, 117, 117, 0.5); */
+    resize: none;
+    margin-bottom: 20px;
+}
+
+.form-btn-footer {
+    display: inline-block;
+    width: 200px;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    cursor: pointer;
+    color: var(--hero-title-color);
+    background-color: var(--logo-color);
+    border-radius: 4px;
+    /* padding: 10px auto; */
+    border: 1px solid transparent;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* margin-left: 124px;
+    margin-right: 124px; */
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+
+    background: #188ce8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.form-btn-footer:hover,
+.form-btn-footer:focus {
+    background-color: var(--button-background-hover);
+}
