--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,7 @@ img {
 }
 .footer-soc {
     display: block;
-    margin-left: 70px;
+    margin-left: 85px;
 }
 .footer-soc-list {
     display: flex;
@@ -668,6 +668,8 @@ img {
     visibility: 250ms (0.4, 0, 0.2, 1);
 }
 
+/* _______________MODAL____________________ */
+
 .modal {
     width: 528px;
     min-height: 581px;
@@ -717,10 +719,6 @@ img {
     margin-bottom: 10px;
     position: relative;
 }
-.form-fild:hover,
-.form-fild:focus {
-    fill: var(--logo-color);
-}
 .form-field input {
     margin: 0;
     padding: 12px 12px 12px 42px;
@@ -762,6 +760,15 @@ img {
 .form-input:focus {
     border: 1px solid #2196f3;
 }
+/* .form-icon:focus ~ .form-input {
+    border: 1px solid var(--logo-color);
+}
+.form-input:hover ~ .form-icon {
+    border: 1px solid var(--logo-color);
+} */
+
+/* __________________CONDITIONS______________________ */
+
 .conditions-block {
     display: flex;
     align-items: center;
@@ -818,18 +825,12 @@ img {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: 124px;
     margin-right: 124px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-
-    background: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .form-btn:hover,
 .form-btn:focus {
     background-color: var(--button-background-hover);
 }
-
 .conditions-link {
     display: inline-block;
     text-decoration: underline;
@@ -841,6 +842,11 @@ img {
 
 /* ____________ФУТЕР ФОРМА____________ */
 
+.footer-form {
+    display: block;
+    width: 570px;
+    margin-left: 93px;
+}
 .footer-field-title {
     font-weight: 700;
     font-size: 14px;
@@ -852,15 +858,7 @@ img {
     width: 100%;
     text-align: left;
 }
-
-.footer-form {
-    display: block;
-    width: 570px;
-    outline: 1px solid #e818a3;
-    margin-left: 93px;
-}
 .form-field-footer {
-    outline: 1px solid #e818a3;
     display: flex;
     flex-direction: row;
 }
@@ -873,6 +871,10 @@ img {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: #2f303a;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
 }
 
 .form-input-footer::placeholder {
@@ -882,25 +884,9 @@ img {
     color: rgba(255, 255, 255, 0.6);
 }
 
-.form-label-footer {
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.01em;
-    color: #757575;
-    display: block;
-}
-
-.form-text-footer {
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.01em;
-    resize: none;
-    margin-bottom: 20px;
+.form-field-footer input:hover,
+.form-field-footer input:focus {
+    border: 1px solid var(--logo-color);
 }
 
 .form-btn-footer {
@@ -917,23 +903,10 @@ img {
     cursor: pointer;
     color: var(--hero-title-color);
     background-color: var(--logo-color);
-    border-radius: 4px;
     border: 1px solid transparent;
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    background: #188ce8;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
-.form-btn-footer:hover,
-.form-btn-footer:focus {
-    background-color: var(--button-background-hover);
-}
-
-/* form-btn-footer::after {
-} */
-
 .footer-icon {
     fill: #ffffff;
     margin-left: 10px;
