--- a/css/styles.css
+++ b/css/styles.css
@@ -681,7 +681,6 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* padding: 40px; */
 }
 .data-modal-close {
     position: absolute;
@@ -694,6 +693,10 @@ img {
     border: 1px solid rgba(0, 0, 0, 0.1);
     background: var(--hero-title-color);
     fill: var(--main-color);
+}
+.data-modal-close:hover,
+.data-modal-close:focus {
+    fill: var(--logo-color);
 }
 .modal-title {
     font-weight: 700;
@@ -709,11 +712,9 @@ img {
 .form {
     width: 528px;
     height: 581px;
-    outline: 1px solid #e818a3;
     padding: 40px;
 }
 .form-field {
-    outline: 1px solid #e818a3;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
@@ -744,9 +745,9 @@ img {
     background-color: #ffffff;
     color: #212121;
 }
-.form-link:hover,
-.form-link:focus {
-    fill: var(--logo-color);
+.form-text:hover,
+.form-text:focus {
+    border: 1px solid #2196f3;
 }
 .form-input {
     width: 448px;
@@ -760,13 +761,12 @@ img {
 .form-input:focus {
     border: 1px solid #2196f3;
 }
-/* .form-icon:focus ~ .form-input {
-    border: 1px solid var(--logo-color);
+.form-input:hover ~ .form-link {
+    fill: var(--logo-color);
 }
-.form-input:hover ~ .form-icon {
-    border: 1px solid var(--logo-color);
-} */
-
+.form-input:focus ~ .form-link {
+    fill: var(--logo-color);
+}
 /* __________________CONDITIONS______________________ */
 
 .conditions-block {
@@ -786,6 +786,49 @@ img {
     letter-spacing: 0.03em;
     color: #757575;
 }
+.conditions-link {
+    display: inline-block;
+    text-decoration: underline;
+    color: var(--logo-color);
+    transition-property: transform, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    margin-left: 4px;
+}
+.checkbox {
+    /* -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute; */
+
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.conditions-label {
+    display: flex;
+    align-items: center;
+}
+.conditions-icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+    margin-right: 7px;
+}
+.checkbox:checked + .conditions-icon {
+    background-color: #2196f3;
+    border: 2px solid #2196f3;
+    background-image: url('../images/icon\ check.svg');
+    background-size: contain;
+    background-origin: border-box;
+}
 .form-label {
     font-size: 12px;
     line-height: 1.17;
@@ -800,11 +843,13 @@ img {
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    font-family: inherit;
+    font-weight: 400;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.01em;
     resize: none;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .form-btn {
@@ -831,16 +876,6 @@ img {
 .form-btn:focus {
     background-color: var(--button-background-hover);
 }
-.conditions-link {
-    display: inline-block;
-    text-decoration: underline;
-    color: var(--logo-color);
-    transition-property: transform, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/* ____________ФУТЕР ФОРМА____________ */
 
 .footer-form {
     display: block;
